crates/strider/tests/snapshots/v2__x86_kernel__control__factorial.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "12" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ EDX", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "14" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "14" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="φ EDX", shape=house, fillcolor="#163030"];
  "17" -> "15" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "14" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v19" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v19" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "20" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "20" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "20" -> "v19" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "17" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "21" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "15" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "22" [label="arg[0] ← EAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="arg[1] ← EDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="φ ECX", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "24" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="Mul:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="φ ECX", shape=house, fillcolor="#163030"];
  "17" -> "25" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "24" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" -> "25" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "27" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v28" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v28" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "29" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "30" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "35" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "36" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "36" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "22" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
